2001-12-06  Christopher Faylor  <cgf@redhat.com>

	* path.cc (path_conv::check): Don't complain if /dev/x/foo when x
	doesn't exist.
	(mount_info::conv_to_win32_path): Keep translating when a /cygdrive is
	found.  Don't attempt to translate to a device name when devn ==
	FH_CYGDRIVE.
	(cygwin_conv_to_win32_path): Set buffer to empty on error.
	(cygwin_conv_to_full_win32_path): Ditto.

	* window.cc: Include unistd.h to verify definitions.

2001-12-05  Christopher Faylor  <cgf@redhat.com>

	* dir.cc (opendir): Detect error return from build_fhandler_from_name.

2001-12-04  David Rothenberger  <daveroth@acm.org>

	* net.cc (cygwin_getsockopt): Dereference optlen pointer when passing
	to __check_null_invalid_struct_errno.

2001-12-03  Christopher Faylor  <cgf@redhat.com>

	* net.cc (cygwin_getsockopt): Allow NULL optval.
	(cygwin_setsockopt): Ditto.
	(cygwin_recvfrom): Allow NULL from.

	* path.cc (mount_info::read_cygdrive_info_from_registry): Don't write
	cygdrive to registry if it doesn't exist.

2001-12-03  Christopher Faylor  <cgf@redhat.com>

	* path.cc (mount_info::conv_to_win32_path): Avoid returning error if
	cygdrive == '/'.
	(mount_info::cygdrive_win32_path): Return 0 if invalid cygdrive path.

2001-11-30  Christopher Faylor  <cgf@redhat.com>

	* debug.cc (makethread): Eliminate unneeded function call.
	* miscfuncs.cc (tls_ix): Predefine.
	* perthread.h (set_reent): Eliminate.
	(get_reent): Ditto.
	* winbase.h (my_tlsalloc): Use global stack base pointer.  Set newly
	allocated location to NULL.
	(my_tlssetvalue): Use global stack base pointer.
	(my_tlsgetvalue): Ditto.

2001-11-27  Christopher Faylor  <cgf@redhat.com>

	* winsup.h: Reorganize to avoid use of experimental stuff.
	* shortcut.cc: Move winsup.h first in include order.

2001-11-27  Christopher Faylor  <cgf@redhat.com>

	* cygwin.din (ualarm): New export.
	* dcrt0.cc (_dll_crt0): Add experimental tls storage declaration.
	(dll_crt0): Ditto.
	* debug.cc (thread_stub): Ditto.